@@ -21,10 +21,15 @@ sub canedit ($$) { #{{{
 
 	foreach my $admin (@{$config{adminuser}}) {
 		if (pagespec_match($page, IkiWiki::userinfo_get($admin, "locked_pages"))) {
-			IkiWiki::needsignin($cgi, $session) unless defined $user;
-			return sprintf(gettext("%s is locked by %s and cannot be edited"),
-				htmllink("", "", $page, noimageinline => 1),
-				IkiWiki::userlink($admin));
+			if (! defined $user ||
+			    ! userinfo_get($session->param("name"), "regdate")) {
+				return sub { IkiWiki::needsignin($cgi, $session) };
+			}
+			else {
+				return sprintf(gettext("%s is locked by %s and cannot be edited"),
+					htmllink("", "", $page, noimageinline => 1),
+					IkiWiki::userlink($admin));
+			}
 		}
 	}
 
