@@ -18,8 +18,13 @@ sub canedit ($$$) { #{{{
 	# Have the user sign in, if they are not already. This is why the
 	# hook runs last, so that any hooks that don't need the user to
 	# signin can override this.
-	IkiWiki::needsignin($cgi, $session);
-	return "";
+        if (! defined $session->param("name") ||
+            ! userinfo_get($session->param("name"), "regdate")) {
+		return sub { IkiWiki::needsignin($cgi, $session) };
+	}
+	else {
+		return "";
+	}
 } #}}}
 
 1
